# council-watch

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  claude-review.yml  claude.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 8add4a71d3d1_initial_schema.py  b1f2c3d4e5a6_add_revised_tracking.py  c2d3e4f5a6b7_add_pdf_size.py  d3e4f5a6b7c8_add_subscribers.py  e4f5a6b7c8d9_add_subscriber_confirmation.py
src/council_meetings/: config.py  db.py  main.py  models.py  notifier.py  rate_limit.py  scheduler.py  scraper.py  subscriptions.py  summarizer.py
static/: style.css
templates/: 404.html  about.html  base.html  index.html  meeting.html  subscribe.html  unsubscribe.html
tests/: conftest.py  test_city_config.py  test_notifier.py  test_rate_limit.py  test_routes.py  test_scraper.py  test_subscriptions.py  test_summarizer.py
