[project]
name = "council-meetings"
version = "0.1.0"
description = "Campbell City Council meeting monitor — scrapes agendas/minutes, summarizes with Claude, notifies via email and Bluesky"
readme = "README.md"
authors = [
    { name = "Brooks McMillin", email = "brooks@brooksmcmillin.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "anthropic>=0.52",
    "atproto>=0.0.56",
    "apscheduler>=3.10,<4",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
