[project]
name = "council-meetings"
version = "0.1.0"
description = "Campbell City Council meeting monitor — scrapes agendas/minutes, summarizes with Claude, notifies via email and Bluesky"
readme = "README.md"
authors = [
    { name = "Brooks McMillin", email = "brooks@brooksmcmillin.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "anthropic>=0.52",
    "atproto>=0.0.56",
    "apscheduler>=3.10,<4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.14",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "C4", "UP", "SIM", "DTZ", "S"]
ignore = [
    "E501",   # line length handled by formatter
    "S101",   # assert usage (fine in non-production code)
    "B008",   # function call in default arg (standard FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
